logs/object_cloud/build.make.038.log.stderr
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp: In function ‘void pcl_cb(const ConstPtr&)’:
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:74:2: error: expected primary-expression before ‘new’
  new pcl::search::KdTree<pcl::PointXYZRGB>);
  ^
make[2]: *** [CMakeFiles/object_cloud_node.dir/src/object_cloud_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/object_cloud_node.dir/all] Error 2
make: *** [all] Error 2
